--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,8 +6,15 @@
 	font-family: 'Roboto-Light';
 	src: url("../fonts/roboto-light-webfont.woff");
 }
+@font-face {
+	font-family: 'Montserrat-Regular';
+	src: url("../fonts/montserrat-regular-webfont.woff");
+}
 
 
 //= partials/reset.scss
+//= partials/swiper.scss
 //= partials/header.scss
+//= partials/galery.scss
+//= partials/partner.scss
 //= partials/footer.scss
