--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -1,5 +1,9 @@
+
+
 .header-wrapper {
-	background: url(../img/promo.jpg);
+	background: url(../img/promomain.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
 	height: 700px;
 	header {
 		width: 940px;
