--- a/src/template/galery.html
+++ b/src/template/galery.html
@@ -55,8 +55,8 @@
 
         </div>
 
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next swiper-button-white"></div>
+        <div class="swiper-button-prev swiper-button-white"></div>
     </div>
     <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -84,8 +84,8 @@
         </div>
 
 
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next swiper-button-white"></div>
+        <div class="swiper-button-prev swiper-button-white"></div>
     </div>
 	</div>
 	<div class="clearfix"></div>
