--- a/src/template/galery.html
+++ b/src/template/galery.html
@@ -7,19 +7,19 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-            	<img src="../img/step1.jpg">
+            	<img src="img/step1.jpg">
             	<p class="step">step 1</p>
             	<h2>Sed leo enim, condimentum</h2>
             	<p class="text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step2.jpg">
+            	<img src="img/step2.jpg">
             	<p class="step">step 2</p>
             	<h2>Morbi velit risus</h2>
             	<p class="text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step3.jpg">
+            	<img src="img/step3.jpg">
             	<p class="step">step 3</p>
             	<h2>Sed leo enim,condimentum</h2>
             	<p class="text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
@@ -35,19 +35,19 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-            	<img src="../img/step2.jpg">
+            	<img src="img/step2.jpg">
             	<p class="step">step 2</p>
             	<h2>Morbi velit risus</h2>
             	<p class="text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step3.jpg">
+            	<img src="img/step3.jpg">
             	<p class="step">step 3</p>
             	<h2>Sed leo enim,condimentum</h2>
             	<p class="text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step1.jpg">
+            	<img src="img/step1.jpg">
             	<p class="step">step 1</p>
             	<h2>Sed leo enim, condimentum</h2>
             	<p class="text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
@@ -61,21 +61,21 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
-            	<img src="../img/step3.jpg">
+            	<img src="img/step3.jpg">
             	<p class="step">step 3</p>
             	<h2>Sed leo enim,condimentum</h2>
             	<p class="text">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
 
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step1.jpg">
+            	<img src="img/step1.jpg">
             	<p class="step">step 1</p>
             	<h2>Sed leo enim, condimentum</h2>
             	<p class="text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
 
             </div>
             <div class="swiper-slide">
-            	<img src="../img/step2.jpg">
+            	<img src="img/step2.jpg">
             	<p class="step">step 2</p>
             	<h2>Morbi velit risus</h2>
             	<p class="text">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
