--- a/src/template/partner.html
+++ b/src/template/partner.html
@@ -3,7 +3,7 @@
 		<h2>Meet a partner for your best holiday</h2>
 		<div class="partner-person">
 			<figure>
-				<img src="../img/partner1.jpg">
+				<img src="img/partner1.jpg">
 				<div class="litlimg tv"></div>
 				<figcaption>
 					Bradley Hunter
@@ -14,7 +14,7 @@
 		</div>
 		<div class="partner-person">
 			<figure>
-				<img src="../img/partner2.jpg">
+				<img src="img/partner2.jpg">
 				<div class="litlimg cofee"></div>
 				<figcaption>
 					Heather Walker
@@ -22,9 +22,9 @@
 				<p>I'm a happy person that loves cats and climbing on mountains.</p>
 			</figure>
 		</div>
-		<div class="partner-person">
+		<div class="partner-person partner-person-tablet">
 			<figure>
-				<img src="../img/patner3.jpg">
+				<img src="img/patner3.jpg">
 				<div class="litlimg gl"></div>
 				<figcaption>
 					Lucas Marsha
@@ -32,9 +32,9 @@
 				<p>I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</p>
 			</figure>
 		</div>
-		<div class="partner-person">
+		<div class="partner-person partner-person-tablet">
 			<figure>
-				<img src="../img/parner4.jpg">
+				<img src="img/parner4.jpg">
 				<div class="litlimg ls"></div>
 				<figcaption>
 					Bradley Hunter
