--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -1,10 +1,22 @@
 .footer-wrapper {
 	border-top: 2px solid #ff4e50;
+	 @include breakpoint(tablet){
+      min-width: 768px;
+        width: 100%;
+        margin-bottom: 41px;
+
+
+    }
 }
 footer {
 	width: 940px;
 	margin: 0 auto;
 	margin-top: 40px;
+	@include breakpoint(tablet){
+     margin-left: 40px;
+
+
+    }
 }
 .footer-nav {
 	display: inline-block;
@@ -48,18 +60,49 @@ footer {
 }
 .footer-nav_first {
 		width: 240px;
+		@include breakpoint(tablet){
+
+        width: 150px;
+        margin-right: 84px;
+
+
+    }
+
 	}
 .footer-nav_second {
 	width: 160px;
+	@include breakpoint(tablet){
+
+        width: 68px;
+        margin-right: 104px;
+
+
+    }
 }
 .footer-nav_three {
 	width: 300px;
+	@include breakpoint(tablet){
+
+        width: 59px;
+        margin-right: 121px;
+
+
+
+    }
 }
 .footer-nav_four {
 	margin: 0;
 	width: 140px;
 	figure {
 		margin: 0;
+		@include breakpoint(tablet){
+
+        width: 110px;
+
+
+
+
+    }
 	}
 	figcaption {
 		font-family: Montserrat-Bold;
