--- a/src/style/partials/galery.scss
+++ b/src/style/partials/galery.scss
@@ -4,6 +4,14 @@
 	padding-top: 100px;
 	position: relative;
         height: 100%;
+         @include breakpoint(tablet){
+
+      	margin-left: 10px;
+      	margin-right: 10px;
+      	min-width: 768px;
+      	width: 100%;
+
+    }
 
 	h2 {
 		font-family: Montserrat-Bold;
@@ -12,12 +20,31 @@
 		font-weight: 700;
 		text-align: center;
 		margin-bottom: 40px;
+		 @include breakpoint(tablet){
+
+      	margin-bottom: 37px;
+
+
+    }
 	}
 	.swiper-container {
         width: 300px;
         height: 450px;
         float: left;
         margin-right: 20px;
+         @include breakpoint(tablet){
+
+      	width: 236px;
+      	height: 398px;
+      	position: relative;
+      	.swiper-button-next,
+      	.swiper-button-prev {
+      		position: absolute;
+      		top: 100px;
+      	}
+
+    }
+
     }
     .swiper-container:last-child {
     	margin-right: 0;
@@ -78,6 +105,12 @@
 				top: 360px;
 				left: 20px;
 				width: 260px;
+				  @include breakpoint(tablet){
+
+      			width: 197px;
+
+
+      	}
 
 							}
     }
@@ -85,6 +118,13 @@
         width: 300px;
        -webkit-background-size: cover;
        background-size: cover;
+       @include breakpoint(tablet){
+
+      	width: 236px;
+      	height: 398px;
+
+      	}
+
     }
 
 }
