--- a/src/style/partials/partner.scss
+++ b/src/style/partials/partner.scss
@@ -1,8 +1,21 @@
 .partner-wrapper {
+
 	width: 940px;
 	margin: 0 auto;
 	margin-top: 100px;
 	margin-bottom: 105px;
+	 @include breakpoint(tablet){
+
+
+      	min-width: 768px;
+      	width: 100%;
+      	padding-left: 155px;
+      	padding-right: 100px;
+      	margin-bottom: 100px;
+
+
+
+    }
 	h2 {
 		font-family: Montserrat-Bold;
 		color: #333333;
@@ -15,7 +28,7 @@
 
 		font-family: Montserrat-Bold;
 		color: #ff4e50;
-		font-size: 14px;
+		font-size: 13px;
 		font-weight: 700;
 		text-align: center;
 		border-style: solid;
@@ -30,10 +43,24 @@
 		margin: 0 auto;
 		text-decoration: none;
 	}
+
+
+		}
 	.partner-person {
 		float: left;
 		width: 218px;
 		margin-right: 15px;
+		 @include breakpoint(tablet){
+
+
+      	width: 194px;
+      	margin-right: 53px;
+      	margin-bottom: 59px;
+
+
+
+    }
+
 
 		 img {
 			display: block;
@@ -100,6 +127,15 @@
 			text-align: center;
 					}
 	}
+	.partner-person-tablet {
+		@include breakpoint(tablet){
+
+
+       margin-bottom: 39px;
+
+
+
+    }
 	.partner-person:last-child {
 		margin-right: 0;
 	}
