--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -9,7 +9,14 @@
         padding-right: 50px;
 
     }
+@include breakpoint(mobile){
 
+     			min-width: 320px	;
+     			width:  100%;
+
+
+
+    }
 
 	background: url(../img/promomain.jpg);
 	background-repeat: no-repeat;
@@ -22,15 +29,40 @@
 
     		margin: 0 auto;
 		padding-top: 30px;
+		@include breakpoint(mobile){
+
+     			padding-top: 20px;
+     			position: relative;
 
 
-		h2 {
+
+    }
+
+
+
+	.header-name {
 			font-family: 'Montserrat-Bold';
 			color: #ffffff;
 			font-size: 20px;
 			font-weight: 700;
 			text-align: left;
 			display: inline-block;
+			text-decoration: none;
+			@include breakpoint(mobile){
+
+
+     			position: absolute;
+     			top: 100px;
+     			text-align: center;
+     			 left: 50%;
+
+     			   transform: translate(-50%, 0);
+
+
+
+
+    }
+
 		}
 		h1 {
 			font-family: Montserrat-Bold;
@@ -70,6 +102,15 @@
 		form {
 			float: right;
 			text-align: left;
+			@include breakpoint(mobile){
+				display: block;
+     			width: 190px;
+     			margin: 0 auto;
+     			float: none;
+
+
+
+    }
 
 			.header-autoriz_log {
 				text-align: right;
