--- a/src/style/partials/galery.scss
+++ b/src/style/partials/galery.scss
@@ -1,3 +1,5 @@
+@import "mixins.scss";
+
 .galery-wrapper {
 	width: 940px;
 	margin: 0 auto;
@@ -10,6 +12,19 @@
       	margin-right: 10px;
       	min-width: 768px;
       	width: 100%;
+
+    }
+    @include breakpoint(mobile){
+
+          min-width: 320px  ;
+          width:  100%;
+          padding-left: 10px;
+          padding-right: 10px;
+          margin-left: auto;
+          margin-right: auto;
+          display: block;
+
+
 
     }
 
@@ -26,6 +41,8 @@
 
 
     }
+
+
 	}
 	.swiper-container {
         width: 300px;
@@ -44,10 +61,54 @@
       	}
 
     }
+    @include breakpoint(mobile){
+
+          min-width: 300px  ;
+          height: 238px;
+          width:  100%;
+          padding-left: 10px;
+          padding-right: 10px;
+          margin-bottom: 12px;
+          position: relative;
+          width: 300px;
+
+
+          display: block;
+          float: none;
+          margin-left: auto;
+          margin-right: auto;
+          .swiper-button-next,
+          .swiper-button-prev {
+            display: none;
+
+          }
+
+
+
+    }
 
     }
     .swiper-container:last-child {
     	margin-right: 0;
+       @include breakpoint(mobile){
+
+          min-width: 300px  ;
+          height: 238px;
+          width:  100%;
+          padding-left: 10px;
+          padding-right: 10px;
+          margin-bottom: 12px;
+          position: relative;
+          width: 300px;
+
+
+          display: block;
+          float: none;
+          margin-left: auto;
+          margin-right: auto;
+
+
+          }
     }
     .swiper-slide {
     	position: relative;
@@ -69,6 +130,11 @@
         -ms-flex-align: center;
         -webkit-align-items: center;
         align-items: center;
+        @include breakpoint(mobile){
+        position: relative;
+
+
+          }
         .step {
         	position: absolute;
         	top: 270px;
@@ -84,6 +150,11 @@
 			padding: 6px 14px;
 			text-transform: uppercase;
 			border-radius: 10px;
+      @include breakpoint(mobile){
+        position: absolute;
+         top: 69px;
+
+          }
 			        }
 			h2 {
 				font-family: Montserrat-Bold;
@@ -94,6 +165,11 @@
 				position: absolute;
 				top:310px;
 				left: 20px;
+         @include breakpoint(mobile){
+
+         top: 102px;
+
+          }
 							}
 			.text {
 				font-family: Roboto-Light;
@@ -111,6 +187,11 @@
 
 
       	}
+         @include breakpoint(mobile){
+
+         top: 174px;
+
+          }
 
 							}
     }
