--- a/src/style/partials/partner.scss
+++ b/src/style/partials/partner.scss
@@ -16,6 +16,17 @@
 
 
     }
+    @include breakpoint(mobile){
+
+     			min-width: 320px	;
+     			width:  100%;
+     			margin-top: 38px;
+
+
+
+
+    }
+
 	h2 {
 		font-family: Montserrat-Bold;
 		color: #333333;
@@ -23,6 +34,13 @@
 		font-weight: 700;
 		text-align: center;
 		margin-bottom: 40px;
+		@include breakpoint(mobile){
+
+     			padding-left: 28px;
+     			padding-right: 28px;
+
+
+    }
 	}
 	a {
 
@@ -42,6 +60,13 @@
 		display: block;
 		margin: 0 auto;
 		text-decoration: none;
+		@include breakpoint(mobile){
+
+     			width: 280px;
+
+
+    }
+
 	}
 
 
@@ -57,6 +82,12 @@
       	margin-right: 53px;
       	margin-bottom: 59px;
 
+
+
+    }
+    @include breakpoint(mobile){
+
+     			margin-left: 64px;
 
 
     }
