--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -11,8 +11,10 @@
     }
 @include breakpoint(mobile){
 
-     			min-width: 320px	;
+     			// min-width: 320px	;
      			width:  100%;
+     			  height: 540px;
+
 
 
 
@@ -31,8 +33,10 @@
 		padding-top: 30px;
 		@include breakpoint(mobile){
 
-     			padding-top: 20px;
+     			padding-top: 22px;
      			position: relative;
+     			height: 540px;
+     			background-size: cover;
 
 
 
@@ -52,9 +56,10 @@
 
 
      			position: absolute;
-     			top: 100px;
+     			top: 172px;
      			text-align: center;
      			 left: 50%;
+     			 letter-spacing: 1.02px;
 
      			   transform: translate(-50%, 0);
 
@@ -85,9 +90,12 @@
 				text-align: center;
 				transform: scaleX(1.0014);
 				width: 300px;
-				margin-top: 229px;
+				margin-top: 170px;
 				margin-left: auto;
 				margin-right: auto;
+				line-height: 1.19;
+				letter-spacing: -0.18px;
+				margin-bottom: 10px;
 
 
 
@@ -108,15 +116,18 @@
 				@include breakpoint(mobile){
 
 
-     			font-family: Roboto-Light;
-				color: #ffffff;
+
 				font-size: 18px;
 				font-weight: 300;
 				text-align: center;
 				transform: scaleX(1.0014);
-				width: 217px;
+				width:220px;
 				margin: 0 auto;
 				margin-bottom: 31px;
+				letter-spacing: 0.01px;
+			// word-spacing: 1.2px;
+			margin-bottom: 20px;
+
 
 
 
@@ -139,6 +150,19 @@
 				margin: 0 auto;
 				display: block;
 				padding: 12px 21px;
+				letter-spacing: 0.5px;
+				@include breakpoint(mobile){
+
+     			width: 276px;
+     			display: block;
+     			margin-left: auto;
+     			margin-right: auto;
+
+
+
+
+
+    }
 			}
 		form {
 			float: right;
@@ -160,7 +184,8 @@
 				color: #ffffff;
 				font-size: 14px;
 				font-weight: 700;
-				padding: 10px  15px;
+				padding: 10px  18px;
+				margin-right: 13px;
 				text-decoration: none;
 
 			}
@@ -172,10 +197,11 @@
 				font-size: 14px;
 				font-weight: 700;
 				text-align: center;
-				padding: 10px  15px;
+				padding: 8px  16px;
 				border: 2px solid #fff;
 				border-radius: 18px;
 				text-decoration: none;
+				line-height: 33px;
 
 			}
 
