--- a/src/style/partials/header.scss
+++ b/src/style/partials/header.scss
@@ -185,7 +185,7 @@
 				font-size: 14px;
 				font-weight: 700;
 				padding: 10px  18px;
-				margin-right: 13px;
+				// margin-right: 5px;
 				text-decoration: none;
 
 			}
