--- a/src/style/partials/ideas.scss
+++ b/src/style/partials/ideas.scss
@@ -25,6 +25,13 @@
     font-weight: 700;
     text-align: center;
     margin-bottom: 40px;
+     @include breakpoint(mobile){
+
+         // letter-spacing: -0.25px;
+         margin-bottom: 17px;
+
+
+    }
   }
   .grid {
 
@@ -39,8 +46,10 @@
     }
      @include breakpoint(mobile){
 
-          min-width: 340px  ;
-          width:  100%;
+          width: 340px  ;
+
+          margin:0 auto;
+
 
 
 
@@ -83,6 +92,7 @@
               height: 121px;
                margin-bottom: 10px;
                margin-left: 10px;
+               margin-bottom: 8px;
 
 
 
@@ -113,7 +123,7 @@
 
               width: 300px;
               height: 121px;
-              margin-bottom: 10px;
+              margin-bottom: 8px;
 
 
 
@@ -164,12 +174,22 @@ text-align: center;
 
               width: 320px;
 
-              margin-bottom: 10px;
+             margin-top: 35px;
+             margin-bottom: 20px;
 
 
 
         }
+.search-form-heading {
+  @include breakpoint(mobile){
 
+            line-height: 1.2;
+            margin-bottom: 10px;
+
+
+
+        }
+}
   .search-form-heading-small{
    font-family: 'Roboto-Light';
     color: #333333;
@@ -177,6 +197,14 @@ text-align: center;
     font-weight: 300;
     text-align: center;
     margin-bottom: 38px;
+     @include breakpoint(mobile){
+
+            line-height: 1.2;
+            margin-bottom: 16px;
+
+
+
+        }
 
 
     }
@@ -204,6 +232,7 @@ text-align: center;
               margin: 0 auto;
               display: block;
               margin-bottom: 10px;
+              padding-left: 13px;
 
 
 
