--- a/src/style/partials/footer.scss
+++ b/src/style/partials/footer.scss
@@ -1,5 +1,5 @@
 .footer-wrapper {
-	border-top: 2px solid #ff4e50;
+	border-top: 4px solid #ff4e50;
 	 @include breakpoint(tablet){
       min-width: 768px;
         width: 100%;
@@ -21,7 +21,7 @@
 footer {
 	width: 940px;
 	margin: 0 auto;
-	margin-top: 40px;
+	margin-top: 38px;
 	@include breakpoint(tablet){
      margin-left: 40px;
 
@@ -60,6 +60,8 @@ footer {
 		font-size: 16px;
 		font-weight: 700;
 		text-align: left;
+		text-transform: uppercase;
+		letter-spacing: 1.03px;
 		 @include breakpoint(mobile){
 
      			text-align: center;
@@ -73,6 +75,18 @@ footer {
 
 
     }
+     @include breakpoint(tablet){
+
+
+				text-transform: uppercase;
+				letter-spacing: 1.15px;
+				width: 200px;
+
+
+
+
+
+    }
 	}
 	h3 {
 		font-family: Montserrat-Bold;
@@ -80,10 +94,18 @@ footer {
 		font-size: 14px;
 		font-weight: 700;
 		text-align: left;
+		margin-bottom: 10px;
 		@include breakpoint(mobile){
 
      			text-align: center;
      			width: 320px;
+
+
+
+    }
+    @include breakpoint(tablet){
+
+     			margin-bottom: 12px;
 
 
 
@@ -117,11 +139,11 @@ footer {
 
 }
 .footer-nav_first {
-		width: 240px;
+		width: 235px;
 		@include breakpoint(tablet){
 
         width: 150px;
-        margin-right: 84px;
+        margin-right: 74px;
 
 
 
@@ -138,10 +160,11 @@ footer {
 	}
 .footer-nav_second {
 	width: 160px;
+
 	@include breakpoint(tablet){
 
         width: 68px;
-        margin-right: 104px;
+        margin-right: 98px;
 
 
     }
@@ -171,7 +194,8 @@ footer {
 }
 .footer-nav_four {
 	margin: 0;
-	width: 140px;
+	width: 225px;
+
 	figure {
 		margin: 0;
 		@include breakpoint(tablet){
@@ -195,7 +219,9 @@ footer {
 		color: #cccccc;
 		font-size: 10px;
 		font-weight: 700;
-		text-align: left;
+		text-align: right;
+		text-transform: uppercase;
+		letter-spacing: 1.1px;
 		@include breakpoint(mobile){
 
      			text-transform: uppercase;
@@ -203,6 +229,17 @@ footer {
      			width: 100%;
      			margin-bottom: 10px;
      			letter-spacing: 1.1px;
+
+
+
+
+    }
+    @include breakpoint(tablet){
+
+     			text-transform: uppercase;
+     			text-align: right;
+     			letter-spacing: 1.2px;
+
 
 
 
